<resources>
    <string name="app_name">校园社区</string>
    <string name="log">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="welcome">欢迎使用</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="passwordCheck">请再次输入密码</string>
    <string name="phone_number">请输入手机号</string>
    <string name="reBack">返回</string>
    <string name="editPassword">修改密码</string>
    <string name="conform_edit">确认修改</string>
    <string name="title_activity_personal">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Schedule">日程</string>
    <string name="Article">动态</string>
    <string name="Anonymous">树洞</string>
    <string name="Personal">我的</string>
    <string name="deliver">发布</string>
    <string name="anonymous_title">树洞</string>
    <string name="exit">退出登录</string>
    <string name="me">我</string>
    <string name="userNickname">渣崽弟弟</string>
    <string name="browse_count">浏览</string>
    <string name="like_count">喜欢</string>
    <string name="follow_count">关注</string>
    <string name="edit_userInfo">修改资料</string>
    <string name="deliver_schedule">新建日程</string>
    <string name="schedule_title">标&#12288;&#12288;题</string>
    <string name="schedule_content">说&#12288;&#12288;明</string>
    <string name="schedule_location">地&#12288;&#12288;点</string>
    <string name="schedule_starttime">请点击此处设置开始时间</string>
    <string name="schedule_endtime">请点击此处设置结束时间</string>
    <string name="title_activity_text">Text</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="EndTime">结束时间</string>
    <string name="StartTime">开始时间</string>
    <string name="editInfo">编辑资料</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>